--- a/LRS.OA.Web/Views/Shared/Error.cshtml
+++ b/LRS.OA.Web/Views/Shared/Error.cshtml
@@ -7,7 +7,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width" />
-    <title>错误</title>
+    <title>错误信息</title>
 </head>
 <body>
     <hgroup>
