修改数据完成

--- a/LRS.OA.Web/Views/UserInfo/Index.cshtml
+++ b/LRS.OA.Web/Views/UserInfo/Index.cshtml
@@ -295,7 +295,7 @@
                 return;
             }
             //将要修改的数据查询出来，显示到文本框中。
-            var id = rows[0].ID;
+            var id = rows[0].Id;
             $.post("/UserInfo/ShowEditInfo", { "id": id }, function (data) {
                 $("#txtUName").val(data.UName);
                 $("#txtUPwd").val(data.UPwd);
@@ -357,7 +357,6 @@
         <table id="tt" style="width: 700px;" title="标题，可以使用代码进行初始化，也可以使用这种属性的方式" iconcls="icon-edit"></table>
     </div>
     <!-------------------------------添加数据------------------------->
-    <!--------------添加数据---------------------->
     <div id="addDiv">
         @using (Ajax.BeginForm("AddUserInfo", "UserInfo", new { }, new AjaxOptions() { HttpMethod = "post", OnSuccess = "afterAdd" }, new { id = "addForm" }))
         {
